--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 11.07.2024
+  Compatibility:
+    - Space Exploration
+      - 9 tiers of modules
+      - Pollution for speed module
+---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: 07.07.2023
   Fixes:
