--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 09.07.2024
+  Compatibility:
+    - Space Exploration
+---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: 07.07.2023
   Fixes:
