--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
-Date: 09.07.2024
+Date: 11.07.2024
   Compatibility:
     - Space Exploration
+		- 9 tiers of modules
+		- Pollution for speed module
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: 07.07.2023
