--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.0
+Date: 04.11.2024
+  Info:
+    - Updated to Factorio 2.0
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 11.07.2024
   Compatibility:
