--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.0
+Date: 05.11.2024
+  Compatibility:
+    - Quality
+      - Quality modules
+      - Toggle speed penalty on quality module
+      - Toggle quality penalty on speed module
+---------------------------------------------------------------------------------------------------
 Version: 2.0.0
 Date: 04.11.2024
   Info:
