--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.2.0
+Date: 13.11.2024
+  Locales:
+    - Added CN locale
+---------------------------------------------------------------------------------------------------
 Version: 2.1.0
 Date: 05.11.2024
   Compatibility:
