Info: version updated ot 2.3.0

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.3.0
+Date: 21.06.2025
+  Compatibility:
+    - Secretas&Frozeta
+      - Tier 4 Modeles
+---------------------------------------------------------------------------------------------------
 Version: 2.2.0
 Date: 13.11.2024
   Locales:
