--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,15 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.4.0
+Date: 21.06.2025
+  Compatibility:
+    - MOAR Modules
+      - Tier 4-6 Modules
+---------------------------------------------------------------------------------------------------
 Version: 2.3.0
 Date: 21.06.2025
   Compatibility:
     - Secretas&Frozeta
-      - Tier 4 Modeles
+      - Tier 4 Modules
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.0
 Date: 13.11.2024
@@ -27,8 +33,8 @@ Version: 1.1.0
 Date: 11.07.2024
   Compatibility:
     - Space Exploration
-	  - 9 tiers of modules
-	  - Pollution for speed module
+	    - 9 tiers of modules
+	    - Pollution for speed module
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: 07.07.2023
